--- a/public/index.html
+++ b/public/index.html
@@ -71,8 +71,8 @@
         <div id="photoCircle2">
             <img src="images/kala.png" alt="Second Photo Circle Image">
         </div>
-        <audio controls loop autoplay hidden>
-            <source src="/audio/Dream.mp3" type="audio/mp3"></audio>
+        <!--- <audio controls loop autoplay hidden>
+            <source src="/audio/Dream.mp3" type="audio/mp3"></audio> ----->
 
     </section>
     <script src="script.js"></script>
