--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
             <br>I made this website just for you, and I hope it brings that sweet smile to your face. <br>
             <br>So let me ask you, Would you be the melody of my guitar solo?<br>
             My game-winning 3-pointer when my team is down by 2 points? "<br/>
-            I would like to ask you if you would do me the honour to take you out?<br>
+            <br>I would like to ask you if you would do me the honour to take you out?<br>
             Please choose one of the options below:<br/>
         </p><br><br/>
         <button id="acceptButton">
