--- a/public/index.html
+++ b/public/index.html
@@ -42,10 +42,10 @@
             She smiles so sweet, it makes my heart skip<br>
             <br>You have the prettiest smile I have ever seen. Your dedication to your Ice capp made<br>
             me realize how committed you are to something that you truly like..<br>
-            <br>I would love to be like your Ice capp, as committed as you are to it, I promise to be like that.<br>
-            <br>I made this website just for you, and I hope it brings that sweet smile to your face. <br>
+            
+            <br>I made this website just for you, and I hope it brings that sweet smile to your face.<br>
             <br>So let me ask you, Would you be the melody of my guitar solo?<br>
-            My game-winning 3-pointer when my team is down by 2 points? "<br/>
+            My game-winning 3-pointer when my team is down by 2 points and there is 2 seconds left? "<br/>
             <br>I would like to ask you if you would do me the honour to take you out?<br>
             Please choose one of the options below:<br/>
         </p><br><br/>
