--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
         </div>
     </div>
     <div class="shadow"></div>
-    <div class="envelope-title">Contact me</div>
+    <div class="envelope-title">Reach out</div>
     <div class="phone-number">+1 647 472 1647</div>
 </div>
 
