--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,8 @@
         
         <h3>My Dearest Julia,</h3>
         
-        <p>
-            Met her at Tim's, ice capp in her grip,<br>
+        <p> (PLEASE USE A COMPUTER TO VISIT THIS SITE)<br>
+            <br>Met her at Tim's, ice capp in her grip,<br>
             She smiles so sweet, it makes my heart skip<br>
             <br>You have the prettiest smile I have ever seen. Your dedication to your Ice capp made<br>
             me realize how committed you are to something that you truly like..<br>
