--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
 
     <section>
-        <p> (PLEASE USE A COMPUTER TO VISIT THIS SITE)<br><br></p>
+        <p> (PLEASE USE A COMPUTER TO VISIT THIS SITE)<br></p>
         <h3>My Dearest Julia,</h3>
         
         <p>
