--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jay likes Julia</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <header>
         <h1>Would you go out with me?</h1>
     </header>
@@ -31,10 +36,8 @@
     </div>
 
 
-
-
     <section>
-        <p> (site is still under development. Jay(6474721647)<br></p>
+        
         <h3>My Dearest Julia,</h3>
         
         <p>
@@ -93,7 +96,7 @@
         </div>
     </div>
     <div class="shadow"></div>
-    <div class="envelope-title">Reach out</div>
+    <div class="envelope-title">Contact me</div>
     <div class="phone-number">+1 647 472 1647</div>
 </div>
 
