--- a/public/index.html
+++ b/public/index.html
@@ -34,13 +34,12 @@
 
 
     <section>
-        <h3>My Dearest Meghan,</h3>
-        
+        <h3>My Dearest Meghan,</h3><br>
         <p>
             Hi ! I think you are so pretty, more importantly a nice person with a good heart,<br>
             I like talking to you and I like the fact that we like a lot of similar things<br>
             <br>Just imagine the fun stuff we could do together,<br>
-            playing guitar together, going to concerts, fooling around and a lot more..<br>
+            playing guitar,singing, going to concerts, fooling around and a lot more..<br>
             
             <br>I made this website just for you, and I hope it brings that sweet smile to your face.<br>
             <br>So let me ask you, Would you be the melody of my guitar solo?<br>
